# tinkerft

./: .gitignore  dataset_builder.py  inference.py  main.py  pyproject.toml  save_weights.py  tinker_infer.py  train.py
